--- a/LAB/requirements.txt
+++ b/LAB/requirements.txt
@@ -12,6 +12,7 @@ executing==2.2.0
 fonttools==4.58.4
 googledrivedownloader==1.1.0
 idna==3.10
+imageio==2.37.0
 ipykernel==6.29.5
 ipython==9.3.0
 ipython_pygments_lexers==1.1.1
@@ -20,9 +21,11 @@ joblib==1.5.0
 jupyter_client==8.6.3
 jupyter_core==5.8.1
 kiwisolver==1.4.8
+lazy_loader==0.4
 matplotlib==3.10.3
 matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
+networkx==3.5
 numpy==2.3.1
 onedrivedownloader==1.1.3
 opencv-python==4.11.0.86
@@ -40,11 +43,13 @@ pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pyzmq==27.0.0
 requests==2.32.4
+scikit-image==0.25.2
 scikit-learn==1.6.1
 scipy==1.15.3
 six==1.17.0
 stack-data==0.6.3
 threadpoolctl==3.6.0
+tifffile==2025.6.11
 tornado==6.5.1
 tqdm==4.67.1
 traitlets==5.14.3
